# pup-python-face-recognition-system

./: .gitignore  README.md  Real Time Face Detection - Notebook.ipynb  Untitled.ipynb  cbam.pkl  encoder.pkl  env.py  env.py.example  face_detection_with_mesh.py  faces_embeddings_done_4classes.npz  init.sh  main.py  main_ai.py  main_api.py  main_gui.py  main_utils.py  pyproject.toml  real_time.py  real_time_MTCNN.py  real_time_haarcascade.py  real_time_unknown.py  requirements.txt  setup.sh  softmax_model_160x160.pkl  svc_model.pkl  svm_model_160x160.pkl  testing.ipynb  threading_test.py
.ipynb_checkpoints/: Real Time Face Detection - Notebook-checkpoint.ipynb  Untitled-checkpoint.ipynb  main-checkpoint.py
Notebooks/: MTCNN,_FACENET,_SVC.ipynb  main_MTCNN,_FACENET,_CBAM,_SVC.ipynb
