[tool.poetry]
name = "face-detection"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "face_detection"}]

[tool.poetry.dependencies]
# python = "^3.11"
python = ">=3.8.1, <3.12"
opencv-python = "^4.7.0.72"
scikit-learn = "^1.2.2"
keras-facenet = "^0.3.2"
mediapipe = "^0.10.0"
tensorflow = "^2.12.0"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
black = "^23.3.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
